--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -146,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2599"
+       "(2599, 1948)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,115 +163,89 @@
    "source": [
     "def day4():\n",
     "    grid = np.array(data(4, lambda x: np.array(list(x))))\n",
-    "    target = 'XMAS'\n",
-    "    rev = target[::-1]\n",
     "    ymax, xmax = grid.shape\n",
-    "    count = 0\n",
-    "    # print(grid)\n",
     "\n",
-    "    def get_neighbors(current, distance):\n",
-    "        col, row = int(current.real), int(current.imag)\n",
-    "        target_letter = target[distance]\n",
-    "        if grid[row, col] != target_letter:\n",
-    "            return\n",
-    "        if distance == len(target)-1:\n",
-    "            total.add(current)\n",
-    "            return\n",
-    "        for v in [1, -1, 1j, -1j, 1+1j, 1-1j, -1+1j, -1-1j]:\n",
-    "            new = current + v\n",
-    "            x, y = int(new.real), int(new.imag)\n",
-    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
-    "                continue\n",
-    "            yield new\n",
+    "    def find_target_occurences(target):\n",
+    "        occurences = set()\n",
+    "\n",
+    "        def get_neighbors(current, distance):\n",
+    "            col, row = int(current.real), int(current.imag)\n",
+    "            target_letter = target[distance]\n",
+    "            if grid[row, col] != target_letter:\n",
+    "                return\n",
+    "            if distance == len(target)-1:\n",
+    "                total.add(current)\n",
+    "                return\n",
+    "            for v in [1, -1, 1j, -1j, 1+1j, 1-1j, -1+1j, -1-1j]:\n",
+    "                new = current + v\n",
+    "                x, y = int(new.real), int(new.imag)\n",
+    "                if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
+    "                    continue\n",
+    "                yield new\n",
+    "        \n",
+    "        for j in range(ymax):\n",
+    "            for i in range(xmax):\n",
+    "                total = set()\n",
+    "                coordinate = i+1j*j\n",
+    "                search(grid, coordinate, get_neighbors)\n",
+    "                for end in total:\n",
+    "                    occurences.add((coordinate, end))\n",
+    "        return occurences\n",
+    "\n",
+    "    def find_diags(hits, l):\n",
+    "        centers = Counter()\n",
+    "        for start, end in hits:\n",
+    "            distance = end-start\n",
+    "            if abs(distance.real) == l and abs(distance.imag) == l:\n",
+    "                center = start + distance/2\n",
+    "                centers[center] += 1\n",
+    "        return centers\n",
     "    \n",
-    "    for j in range(ymax):\n",
-    "        for i in range(xmax):\n",
-    "            # Find diagonals - already implemented from misreading the question\n",
-    "            total = set()\n",
-    "            coordinate = i+1j*j\n",
-    "            search(grid, coordinate, get_neighbors)\n",
-    "            for x in total:\n",
-    "                distance = x-coordinate\n",
-    "                if abs(distance.real) == 3 and abs(distance.imag) == 3:\n",
-    "                    count += 1\n",
-    "                elif distance.real == 3 and not distance.imag:\n",
-    "                    if ''.join(grid[j, i:i+4]) == target:\n",
-    "                        # print('a', x, coordinate, distance, i, j, grid[j, i:i+4])\n",
-    "                        count += 1\n",
-    "                elif distance.real == -3 and not distance.imag:\n",
-    "                    # print('b', x, coordinate, distance, i, j, grid[j, i-3:i+1], rev)\n",
-    "                    if ''.join(grid[j, i-3:i+1]) == rev:\n",
-    "                        count += 1\n",
-    "                elif not distance.real and distance.imag == 3:\n",
-    "                    if ''.join(grid[j:j+4, i]) == target:\n",
-    "                        count += 1\n",
-    "                elif not distance.real and distance.imag == -3:\n",
-    "                    if ''.join(grid[j-3:j+1, i]) == rev:\n",
-    "                        count += 1\n",
+    "    def find_straights(hits, target):\n",
+    "        rev = target[::-1]\n",
+    "        l = len(target)\n",
+    "        td = l-1\n",
+    "        for start, end in hits:\n",
+    "            i, j = int(start.real), int(start.imag)\n",
+    "            d = end-start\n",
+    "            if (\n",
+    "                (d.real == td and not d.imag and ''.join(grid[j, i:i+l]) == target)\n",
+    "                or (d.real == -td and not d.imag and ''.join(grid[j, i-td:i+1]) == rev)\n",
+    "                or (not d.real and d.imag == td and ''.join(grid[j:j+l, i]) == target)\n",
+    "                or (not d.real and d.imag == -td and ''.join(grid[j-td:j+1, i]) == rev)\n",
+    "            ):\n",
+    "                yield start\n",
     "\n",
-    "    return count\n",
+    "    target = 'XMAS'\n",
+    "    matches = find_target_occurences(target)\n",
+    "    part1 = sum(find_diags(matches, len(target)-1).values()) + len(list(find_straights(matches, target)))\n",
+    "\n",
+    "    centers = find_diags(find_target_occurences(target[1:]), len(target)-2)\n",
+    "    part2 = sum([1 if centers[x] == 2 else 0 for x in centers])\n",
+    "\n",
+    "    return (part1, part2)\n",
     "\n",
     "day4()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1948"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MMMSXXMASM', 'MSAMXMSMSA', 'AMXSXMAAMM', 'MSAMASMSMX', 'XMASAMXAMM', 'XXAMMXXAMA', 'SMSMSASXSS', 'SAXAMASAAA', 'MAMMMXMMMM', 'MXMXAXMASX']\n"
+     ]
     }
    ],
    "source": [
-    "def day4():\n",
-    "    grid = np.array(data(4, lambda x: np.array(list(x))))\n",
-    "    target = 'MAS'\n",
-    "    rev = target[::-1]\n",
-    "    ymax, xmax = grid.shape\n",
-    "    count = 0\n",
-    "    # print(grid)\n",
+    "def day5():\n",
+    "    print(data(0))\n",
     "\n",
-    "    def get_neighbors(current, distance):\n",
-    "        col, row = int(current.real), int(current.imag)\n",
-    "        target_letter = target[distance]\n",
-    "        if grid[row, col] != target_letter:\n",
-    "            return\n",
-    "        if distance == len(target)-1:\n",
-    "            total.add(current)\n",
-    "            return\n",
-    "        for v in [1+1j, 1-1j, -1+1j, -1-1j]:\n",
-    "            new = current + v\n",
-    "            x, y = int(new.real), int(new.imag)\n",
-    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
-    "                continue\n",
-    "            yield new\n",
-    "    \n",
-    "    hits = set()\n",
-    "    for j in range(ymax):\n",
-    "        for i in range(xmax):\n",
-    "            total = set()\n",
-    "            coordinate = i+1j*j\n",
-    "            search(grid, coordinate, get_neighbors)\n",
-    "            for x in total:\n",
-    "                distance = x-coordinate\n",
-    "                if abs(distance.real) == 2 and abs(distance.imag) == 2:\n",
-    "                    center = coordinate + distance/2\n",
-    "                    if center in hits:\n",
-    "                        count += 1\n",
-    "                    hits.add(center)\n",
-    "                    # print(coordinate, x, distance, center)\n",
-    "\n",
-    "    return count\n",
-    "\n",
-    "day4()"
+    "day5()"
    ]
   }
  ],
