--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from typing import Callable, TypeVar\n",
-    "from collections import Counter, deque\n",
+    "from collections import Counter, deque, defaultdict\n",
     "import itertools\n",
     "import regex as re\n",
     "from intervaltree import Interval, IntervalTree\n",
@@ -230,20 +230,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['MMMSXXMASM', 'MSAMXMSMSA', 'AMXSXMAAMM', 'MSAMASMSMX', 'XMASAMXAMM', 'XXAMMXXAMA', 'SMSMSASXSS', 'SAXAMASAAA', 'MAMMMXMMMM', 'MXMXAXMASX']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "6041"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "class Node:\n",
+    "    def __init__(self):\n",
+    "        self.children = set()\n",
+    "        self.parents = set()\n",
+    "    def __repr__(self):\n",
+    "        return f'{self.parents} - {self.children}'\n",
+    "\n",
     "def day5():\n",
-    "    print(data(0))\n",
+    "    text = data(5)\n",
+    "    split = text.index('')\n",
+    "    lists = [tuple(map(int, x.split(','))) for x in text[split+1:]]\n",
+    "\n",
+    "    nodes = defaultdict(lambda: Node())\n",
+    "    for x in text[:split]:\n",
+    "        parent, child = tuple(map(int, x.split('|')))\n",
+    "        nodes[parent].children.add(child)\n",
+    "        nodes[child].parents.add(parent)\n",
+    "\n",
+    "    def check_illegal(nums):\n",
+    "        illegal = set()\n",
+    "        for num in nums:\n",
+    "            if num in illegal:\n",
+    "                return True\n",
+    "            illegal.update(nodes[num].parents)\n",
+    "\n",
+    "    result = 0\n",
+    "    for nums in lists:\n",
+    "        if not check_illegal(nums):\n",
+    "            result += nums[len(nums)//2]\n",
+    "\n",
+    "    return result\n",
     "\n",
     "day5()"
    ]
