--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "from typing import Callable, TypeVar\n",
     "from collections import Counter, deque, defaultdict\n",
     "import itertools\n",
+    "from functools import cmp_to_key\n",
     "import regex as re\n",
     "from intervaltree import Interval, IntervalTree\n",
     "\n",
@@ -230,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6041"
+       "(6041, 4884)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,14 +271,45 @@
     "                return True\n",
     "            illegal.update(nodes[num].parents)\n",
     "\n",
-    "    result = 0\n",
+    "    def compare(a, b):\n",
+    "        if a in nodes[b].children:\n",
+    "            return -1\n",
+    "        elif b in nodes[a].children:\n",
+    "            return 1\n",
+    "        return -1 if a < b else 1\n",
+    "\n",
+    "    part1 = 0\n",
+    "    part2 = 0\n",
     "    for nums in lists:\n",
     "        if not check_illegal(nums):\n",
-    "            result += nums[len(nums)//2]\n",
+    "            part1 += nums[len(nums)//2]\n",
+    "        else:\n",
+    "            part2 += sorted(nums, key=cmp_to_key(compare))[len(nums)//2]\n",
     "\n",
-    "    return result\n",
+    "    return part1, part2\n",
     "\n",
     "day5()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import locale\n",
+    "locale.strcoll('a', 'c')"
    ]
   }
  ],
