--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -240,52 +240,43 @@
        "(6041, 4884)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class Node:\n",
-    "    def __init__(self):\n",
-    "        self.children = set()\n",
-    "        self.parents = set()\n",
-    "    def __repr__(self):\n",
-    "        return f'{self.parents} - {self.children}'\n",
-    "\n",
     "def day5():\n",
     "    text = data(5)\n",
     "    split = text.index('')\n",
     "    lists = [tuple(map(int, x.split(','))) for x in text[split+1:]]\n",
     "\n",
-    "    nodes = defaultdict(lambda: Node())\n",
+    "    parents = defaultdict(lambda: set())\n",
     "    for x in text[:split]:\n",
     "        parent, child = tuple(map(int, x.split('|')))\n",
-    "        nodes[parent].children.add(child)\n",
-    "        nodes[child].parents.add(parent)\n",
+    "        parents[child].add(parent)\n",
     "\n",
     "    def check_illegal(nums):\n",
     "        illegal = set()\n",
     "        for num in nums:\n",
     "            if num in illegal:\n",
     "                return True\n",
-    "            illegal.update(nodes[num].parents)\n",
+    "            illegal.update(parents[num])\n",
     "\n",
     "    def compare(a, b):\n",
-    "        if a in nodes[b].children:\n",
-    "            return -1\n",
-    "        elif b in nodes[a].children:\n",
+    "        if a in parents[b]:\n",
     "            return 1\n",
+    "        elif b in parents[a]:\n",
+    "            return -1\n",
     "        return -1 if a < b else 1\n",
     "\n",
-    "    part1 = 0\n",
-    "    part2 = 0\n",
+    "    part1, part2 = 0, 0\n",
     "    for nums in lists:\n",
     "        if not check_illegal(nums):\n",
     "            part1 += nums[len(nums)//2]\n",
     "        else:\n",
     "            part2 += sorted(nums, key=cmp_to_key(compare))[len(nums)//2]\n",
-    "\n",
+    "            \n",
     "    return part1, part2\n",
     "\n",
     "day5()"
@@ -293,23 +284,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['47|53', '97|13', '97|61', '97|47', '75|29', '61|13', '75|53', '29|13', '97|29', '53|29', '61|53', '97|53', '61|29', '47|13', '75|47', '97|75', '47|61', '75|61', '47|29', '75|13', '53|13', '', '75,47,61,53,29', '97,61,53,29,13', '75,29,13', '75,97,47,61,53', '61,13,29', '97,13,75,29,47']\n"
+     ]
     }
    ],
    "source": [
-    "import locale\n",
-    "locale.strcoll('a', 'c')"
+    "def day6():\n",
+    "    print(data(0))\n",
+    "\n",
+    "day6()"
    ]
   }
  ],
