--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "(6041, 4884)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,20 +284,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['47|53', '97|13', '97|61', '97|47', '75|29', '61|13', '75|53', '29|13', '97|29', '53|29', '61|53', '97|53', '61|29', '47|13', '75|47', '97|75', '47|61', '75|61', '47|29', '75|13', '53|13', '', '75,47,61,53,29', '97,61,53,29,13', '75,29,13', '75,97,47,61,53', '61,13,29', '97,13,75,29,47']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4374"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def day6():\n",
-    "    print(data(0))\n",
+    "def day6(debug=False):\n",
+    "    grid = np.array(data(6, list))\n",
+    "    ymax, xmax = grid.shape\n",
+    "    y, x = np.argwhere(grid == '^')[0]\n",
+    "    grid[y, x] = '.'\n",
+    "    turns = [(1, 0), (0, 1), (-1, 0), (0, -1)]\n",
+    "    directions, v = itertools.cycle([np.array(x) for x in turns]), turns[-1]\n",
+    "\n",
+    "    visited = set([(y, x)])\n",
+    "    while True:\n",
+    "        ny, nx = y+v[1], x + v[0]\n",
+    "        if (nx < 0 or ny < 0 or nx >= xmax or ny >= ymax):\n",
+    "            break\n",
+    "        elif grid[ny, nx] != '.':\n",
+    "            v = next(directions)\n",
+    "            continue\n",
+    "        y, x = ny, nx\n",
+    "        visited.add((y, x))\n",
+    "\n",
+    "    if debug:\n",
+    "        for i in visited:\n",
+    "            grid[i] = 'X'\n",
+    "        print(grid)\n",
+    "\n",
+    "    return len(visited)\n",
     "\n",
     "day6()"
    ]
