--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "4374"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,14 +318,54 @@
     "        y, x = ny, nx\n",
     "        visited.add((y, x))\n",
     "\n",
-    "    if debug:\n",
-    "        for i in visited:\n",
-    "            grid[i] = 'X'\n",
-    "        print(grid)\n",
-    "\n",
     "    return len(visited)\n",
     "\n",
     "day6()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1705\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day6(debug=False):\n",
+    "    grid = np.array(data(6, list))\n",
+    "    ymax, xmax = grid.shape\n",
+    "    y, x = np.argwhere(grid == '^')[0]\n",
+    "    grid[y, x] = '.'\n",
+    "    turns = [(1, 0), (0, 1), (-1, 0), (0, -1)]\n",
+    "    \n",
+    "    def run_guard(y, x, obstacle=(-1, -1)):\n",
+    "        directions, v = itertools.cycle(turns), turns[-1]\n",
+    "        y, x = int(y)-v[1], int(x)-v[0]\n",
+    "        visited, states = set(), set()\n",
+    "        while True:\n",
+    "            ny, nx = y+v[1], x + v[0]\n",
+    "            if (ny, nx, v) in states:\n",
+    "                return True, states\n",
+    "            elif (nx < 0 or ny < 0 or nx >= xmax or ny >= ymax):\n",
+    "                return False, visited\n",
+    "            elif grid[ny, nx] != '.' or (ny, nx) == obstacle:\n",
+    "                v = next(directions)\n",
+    "                continue\n",
+    "            y, x = ny, nx\n",
+    "            visited.add((y, x))\n",
+    "            states.add((y, x, v))\n",
+    "\n",
+    "    _, original = run_guard(y, x)\n",
+    "\n",
+    "    print(sum([run_guard(y, x, i)[0] for i in original]))\n",
+    "\n",
+    "day6(True)"
    ]
   }
  ],
