--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -284,69 +284,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4374"
+       "(4374, 1705)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def day6(debug=False):\n",
+    "def day6():\n",
     "    grid = np.array(data(6, list))\n",
     "    ymax, xmax = grid.shape\n",
-    "    y, x = np.argwhere(grid == '^')[0]\n",
-    "    grid[y, x] = '.'\n",
-    "    turns = [(1, 0), (0, 1), (-1, 0), (0, -1)]\n",
-    "    directions, v = itertools.cycle([np.array(x) for x in turns]), turns[-1]\n",
-    "\n",
-    "    visited = set([(y, x)])\n",
-    "    while True:\n",
-    "        ny, nx = y+v[1], x + v[0]\n",
-    "        if (nx < 0 or ny < 0 or nx >= xmax or ny >= ymax):\n",
-    "            break\n",
-    "        elif grid[ny, nx] != '.':\n",
-    "            v = next(directions)\n",
-    "            continue\n",
-    "        y, x = ny, nx\n",
-    "        visited.add((y, x))\n",
-    "\n",
-    "    return len(visited)\n",
-    "\n",
-    "day6()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1705\n"
-     ]
-    }
-   ],
-   "source": [
-    "def day6(debug=False):\n",
-    "    grid = np.array(data(6, list))\n",
-    "    ymax, xmax = grid.shape\n",
-    "    y, x = np.argwhere(grid == '^')[0]\n",
-    "    grid[y, x] = '.'\n",
+    "    start = np.argwhere(grid == '^')[0]\n",
+    "    grid[*start] = '.'\n",
     "    turns = [(1, 0), (0, 1), (-1, 0), (0, -1)]\n",
     "    \n",
-    "    def run_guard(y, x, obstacle=(-1, -1)):\n",
+    "    def run_guard(obstacle=(-1, -1)):\n",
     "        directions, v = itertools.cycle(turns), turns[-1]\n",
-    "        y, x = int(y)-v[1], int(x)-v[0]\n",
+    "        y, x = int(start[0])-v[1], int(start[1])-v[0]\n",
     "        visited, states = set(), set()\n",
     "        while True:\n",
     "            ny, nx = y+v[1], x + v[0]\n",
@@ -361,11 +323,32 @@
     "            visited.add((y, x))\n",
     "            states.add((y, x, v))\n",
     "\n",
-    "    _, original = run_guard(y, x)\n",
+    "    _, original = run_guard()\n",
+    "    part1 = len(original)\n",
+    "    part2 = sum([run_guard(i)[0] for i in original])\n",
+    "    return part1, part2\n",
     "\n",
-    "    print(sum([run_guard(y, x, i)[0] for i in original]))\n",
+    "day6()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['....#.....', '.........#', '..........', '..#.......', '.......#..', '..........', '.#..^.....', '........#.', '#.........', '......#...']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day7():\n",
+    "    print(data(0))\n",
     "\n",
-    "day6(True)"
+    "day7()"
    ]
   }
  ],
