--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "from functools import cmp_to_key\n",
     "import regex as re\n",
     "from intervaltree import Interval, IntervalTree\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "\n",
     "np.set_printoptions(edgeitems=30, linewidth=100000, \n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +54,7 @@
        "(1941353, 22539317)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +82,7 @@
        "array([356, 413])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
        "(2599, 1948)"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,23 +285,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4374, 1705)"
+       "(41, 6)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def day6():\n",
-    "    grid = np.array(data(6, list))\n",
+    "    grid = np.array(data(0, list))\n",
     "    ymax, xmax = grid.shape\n",
     "    start = np.argwhere(grid == '^')[0]\n",
     "    grid[*start] = '.'\n",
@@ -325,7 +326,8 @@
     "\n",
     "    _, original = run_guard()\n",
     "    part1 = len(original)\n",
-    "    part2 = sum([run_guard(i)[0] for i in original])\n",
+    "    with ThreadPoolExecutor() as tpe:\n",
+    "        part2 = sum([r[0] for r in tpe.map(lambda x: run_guard(x), original)])\n",
     "    return part1, part2\n",
     "\n",
     "day6()"
