--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from typing import Callable, TypeVar\n",
     "from collections import Counter, deque, defaultdict\n",
     "import itertools\n",
-    "from functools import cmp_to_key\n",
+    "from functools import cmp_to_key, cache\n",
     "import regex as re\n",
     "from intervaltree import Interval, IntervalTree\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "(6041, 4884)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,22 +335,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['....#.....', '.........#', '..........', '..#.......', '.......#..', '..........', '.#..^.....', '........#.', '#.........', '......#...']\n"
+      "11387\n"
      ]
     }
    ],
    "source": [
     "def day7():\n",
-    "    print(data(0))\n",
+    "    equations = data(0, lambda x: [int(n) for n in re.split(r' |: ', x)])\n",
+    "    \n",
+    "    def check(n, acc, arr):\n",
+    "        if not arr:\n",
+    "            return n == acc\n",
+    "        elif acc > n:\n",
+    "            return False\n",
+    "        x, tail = arr[0], arr[1:]\n",
+    "        return (check(n, int(f'{acc}{x}'), tail) or\n",
+    "                check(n, acc*x, tail) or\n",
+    "                check(n, acc+x, tail))\n",
+    "\n",
+    "    result = 0\n",
+    "    for eq in equations:\n",
+    "        if check(eq[0], eq[1], tuple(eq[2:])):\n",
+    "            result += eq[0]\n",
+    "    print(result)\n",
+    "\n",
     "\n",
     "day7()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7710205485870, 20928985450275)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day7():\n",
+    "    equations, flag = data(7, lambda x: [int(n) for n in re.split(r' |: ', x)]), False\n",
+    "    def check(n, acc, arr):\n",
+    "        if not arr:\n",
+    "            return n if n == acc else 0\n",
+    "        elif acc > n:\n",
+    "            return\n",
+    "        x, tail = arr[0], arr[1:]\n",
+    "        return ((flag and check(n, int(f'{acc}{x}'), tail)) or\n",
+    "                check(n, acc*x, tail) or\n",
+    "                check(n, acc+x, tail))\n",
+    "    part1, flag = sum([check(eq[0], eq[1], tuple(eq[2:])) for eq in equations]), True\n",
+    "    with ThreadPoolExecutor() as tpe:\n",
+    "        part2 = sum(tpe.map(lambda eq: check(eq[0], eq[1], tuple(eq[2:])), equations))\n",
+    "    return part1, part2\n",
+    "\n",
+    "day7()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['190: 10 19', '3267: 81 40 27', '83: 17 5', '156: 15 6', '7290: 6 8 6 15', '161011: 16 10 13', '192: 17 8 14', '21037: 9 7 18 13', '292: 11 6 16 20']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day8():\n",
+    "    print(data(0))\n",
+    "\n",
+    "day8()"
    ]
   }
  ],
