--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -408,20 +408,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['190: 10 19', '3267: 81 40 27', '83: 17 5', '156: 15 6', '7290: 6 8 6 15', '161011: 16 10 13', '192: 17 8 14', '21037: 9 7 18 13', '292: 11 6 16 20']\n"
+      "{(np.int64(38), np.int64(23)), (np.int64(33), np.int64(36)), (np.int64(33), np.int64(45)), (np.int64(47), np.int64(7)), (np.int64(2), np.int64(48)), (np.int64(37), np.int64(15)), (np.int64(5), np.int64(10)), (np.int64(19), np.int64(9)), (np.int64(3), np.int64(13)), (np.int64(12), np.int64(25)), (np.int64(3), np.int64(22)), (np.int64(2), np.int64(2)), (np.int64(8), np.int64(18)), (np.int64(21), np.int64(37)), (np.int64(11), np.int64(5)), (np.int64(37), np.int64(33)), (np.int64(28), np.int64(30)), (np.int64(13), np.int64(8)), (np.int64(5), np.int64(37)), (np.int64(32), np.int64(21)), (np.int64(4), np.int64(39)), (np.int64(41), np.int64(24)), (np.int64(35), np.int64(17)), (np.int64(33), np.int64(29)), (np.int64(6), np.int64(20)), (np.int64(39), np.int64(17)), (np.int64(25), np.int64(34)), (np.int64(11), np.int64(44)), (np.int64(27), np.int64(6)), (np.int64(18), np.int64(37)), (np.int64(19), np.int64(2)), (np.int64(20), np.int64(22)), (np.int64(45), np.int64(21)), (np.int64(31), np.int64(22)), (np.int64(31), np.int64(31)), (np.int64(14), np.int64(24)), (np.int64(9), np.int64(19)), (np.int64(46), np.int64(13)), (np.int64(38), np.int64(9)), (np.int64(42), np.int64(25)), (np.int64(35), np.int64(19)), (np.int64(41), np.int64(35)), (np.int64(2), np.int64(34)), (np.int64(37), np.int64(1)), (np.int64(10), np.int64(47)), (np.int64(47), np.int64(11)), (np.int64(16), np.int64(42)), (np.int64(28), np.int64(7)), (np.int64(14), np.int64(8)), (np.int64(34), np.int64(23)), (np.int64(9), np.int64(3)), (np.int64(9), np.int64(12)), (np.int64(37), np.int64(28)), (np.int64(21), np.int64(41)), (np.int64(9), np.int64(21)), (np.int64(14), np.int64(35)), (np.int64(35), np.int64(3)), (np.int64(14), np.int64(44)), (np.int64(43), np.int64(34)), (np.int64(33), np.int64(33)), (np.int64(48), np.int64(15)), (np.int64(30), np.int64(43)), (np.int64(20), np.int64(8)), (np.int64(36), np.int64(4)), (np.int64(2), np.int64(45)), (np.int64(17), np.int64(9)), (np.int64(0), np.int64(2)), (np.int64(29), np.int64(38)), (np.int64(9), np.int64(14)), (np.int64(26), np.int64(48)), (np.int64(37), np.int64(30)), (np.int64(7), np.int64(44)), (np.int64(21), np.int64(43)), (np.int64(4), np.int64(36)), (np.int64(12), np.int64(49)), (np.int64(26), np.int64(11)), (np.int64(25), np.int64(13)), (np.int64(33), np.int64(26)), (np.int64(41), np.int64(39)), (np.int64(20), np.int64(1)), (np.int64(35), np.int64(32)), (np.int64(33), np.int64(44)), (np.int64(0), np.int64(41)), (np.int64(2), np.int64(38)), (np.int64(38), np.int64(25)), (np.int64(14), np.int64(12)), (np.int64(20), np.int64(28)), (np.int64(21), np.int64(27)), (np.int64(38), np.int64(43)), (np.int64(37), np.int64(23)), (np.int64(32), np.int64(2)), (np.int64(44), np.int64(1)), (np.int64(10), np.int64(8)), (np.int64(13), np.int64(7)), (np.int64(15), np.int64(4)), (np.int64(32), np.int64(20)), (np.int64(42), np.int64(22)), (np.int64(26), np.int64(4)), (np.int64(43), np.int64(20)), (np.int64(42), np.int64(31)), (np.int64(1), np.int64(23)), (np.int64(31), np.int64(3)), (np.int64(18), np.int64(18)), (np.int64(39), np.int64(16)), (np.int64(25), np.int64(33)), (np.int64(45), np.int64(11)), (np.int64(22), np.int64(9)), (np.int64(38), np.int64(27)), (np.int64(40), np.int64(24)), (np.int64(21), np.int64(20)), (np.int64(12), np.int64(17)), (np.int64(31), np.int64(30)), (np.int64(26), np.int64(43)), (np.int64(40), np.int64(42)), (np.int64(33), np.int64(3)), (np.int64(13), np.int64(0)), (np.int64(41), np.int64(16)), (np.int64(24), np.int64(0)), (np.int64(42), np.int64(15)), (np.int64(25), np.int64(8)), (np.int64(28), np.int64(34)), (np.int64(30), np.int64(31)), (np.int64(0), np.int64(27)), (np.int64(9), np.int64(39)), (np.int64(12), np.int64(1)), (np.int64(19), np.int64(49)), (np.int64(32), np.int64(34)), (np.int64(45), np.int64(13)), (np.int64(11), np.int64(45)), (np.int64(22), np.int64(11)), (np.int64(29), np.int64(26)), (np.int64(46), np.int64(42)), (np.int64(4), np.int64(6)), (np.int64(17), np.int64(12)), (np.int64(3), np.int64(16)), (np.int64(6), np.int64(33)), (np.int64(15), np.int64(45)), (np.int64(23), np.int64(28)), (np.int64(42), np.int64(8)), (np.int64(42), np.int64(17)), (np.int64(17), np.int64(27)), (np.int64(22), np.int64(41)), (np.int64(7), np.int64(4)), (np.int64(27), np.int64(37)), (np.int64(2), np.int64(26)), (np.int64(46), np.int64(26)), (np.int64(12), np.int64(3)), (np.int64(40), np.int64(19)), (np.int64(6), np.int64(17)), (np.int64(14), np.int64(0)), (np.int64(24), np.int64(32)), (np.int64(4), np.int64(17)), (np.int64(12), np.int64(30)), (np.int64(27), np.int64(12)), (np.int64(4), np.int64(26)), (np.int64(4), np.int64(35)), (np.int64(30), np.int64(17)), (np.int64(47), np.int64(33)), (np.int64(1), np.int64(11)), (np.int64(2), np.int64(10)), (np.int64(16), np.int64(9)), (np.int64(44), np.int64(25)), (np.int64(2), np.int64(19)), (np.int64(8), np.int64(35)), (np.int64(25), np.int64(21)), (np.int64(40), np.int64(3)), (np.int64(9), np.int64(43)), (np.int64(39), np.int64(22)), (np.int64(32), np.int64(38)), (np.int64(29), np.int64(21)), (np.int64(13), np.int64(34)), (np.int64(38), np.int64(33)), (np.int64(3), np.int64(11)), (np.int64(1), np.int64(41)), (np.int64(15), np.int64(40)), (np.int64(35), np.int64(43)), (np.int64(27), np.int64(5)), (np.int64(43), np.int64(1)), (np.int64(34), np.int64(20)), (np.int64(18), np.int64(36)), (np.int64(23), np.int64(23)), (np.int64(18), np.int64(45)), (np.int64(42), np.int64(12)), (np.int64(47), np.int64(26)), (np.int64(35), np.int64(6)), (np.int64(44), np.int64(9)), (np.int64(37), np.int64(34)), (np.int64(28), np.int64(31)), (np.int64(45), np.int64(47)), (np.int64(30), np.int64(28)), (np.int64(3), np.int64(41)), (np.int64(5), np.int64(38)), (np.int64(15), np.int64(15)), (np.int64(29), np.int64(14)), (np.int64(24), np.int64(27)), (np.int64(23), np.int64(7)), (np.int64(32), np.int64(40)), (np.int64(40), np.int64(23)), (np.int64(44), np.int64(39)), (np.int64(35), np.int64(36)), (np.int64(49), np.int64(35)), (np.int64(23), np.int64(16)), (np.int64(14), np.int64(4)), (np.int64(38), np.int64(35)), (np.int64(35), np.int64(45)), (np.int64(15), np.int64(42)), (np.int64(7), np.int64(38)), (np.int64(39), np.int64(36)), (np.int64(31), np.int64(41)), (np.int64(22), np.int64(38)), (np.int64(36), np.int64(37)), (np.int64(19), np.int64(21)), (np.int64(30), np.int64(30)), (np.int64(22), np.int64(47)), (np.int64(12), np.int64(46)), (np.int64(49), np.int64(10)), (np.int64(4), np.int64(42)), (np.int64(5), np.int64(40)), (np.int64(48), np.int64(20)), (np.int64(0), np.int64(35)), (np.int64(20), np.int64(4)), (np.int64(21), np.int64(3)), (np.int64(13), np.int64(29)), (np.int64(38), np.int64(28)), (np.int64(21), np.int64(21)), (np.int64(24), np.int64(47)), (np.int64(21), np.int64(10)), (np.int64(19), np.int64(5)), (np.int64(10), np.int64(2)), (np.int64(33), np.int64(4)), (np.int64(31), np.int64(34)), (np.int64(36), np.int64(30)), (np.int64(11), np.int64(10)), (np.int64(31), np.int64(43)), (np.int64(30), np.int64(23)), (np.int64(20), np.int64(43)), (np.int64(22), np.int64(40)), (np.int64(14), np.int64(36)), (np.int64(11), np.int64(19)), (np.int64(29), np.int64(0)), (np.int64(47), np.int64(39)), (np.int64(3), np.int64(27)), (np.int64(46), np.int64(16)), (np.int64(7), np.int64(6)), (np.int64(40), np.int64(18)), (np.int64(21), np.int64(14)), (np.int64(49), np.int64(30)), (np.int64(25), np.int64(30)), (np.int64(6), np.int64(25)), (np.int64(7), np.int64(24)), (np.int64(17), np.int64(1)), (np.int64(17), np.int64(10)), (np.int64(37), np.int64(22)), (np.int64(2), np.int64(0)), (np.int64(36), np.int64(32)), (np.int64(45), np.int64(44)), (np.int64(32), np.int64(10)), (np.int64(12), np.int64(41)), (np.int64(3), np.int64(47)), (np.int64(49), np.int64(14)), (np.int64(13), np.int64(24))}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "261"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def day8():\n",
-    "    print(data(0))\n",
+    "    grid = np.array(data(8, list))\n",
+    "    ymax, xmax = grid.shape\n",
+    "\n",
+    "    points = {i:np.argwhere(grid==i) for i in np.unique(grid) if i != '.'}\n",
+    "    # print(points)\n",
+    "\n",
+    "    antinodes = set()\n",
+    "    for antennae in points:\n",
+    "        combos = itertools.combinations(points[antennae], 2)\n",
+    "        for combo in combos:\n",
+    "            # print(combo)\n",
+    "            diff = combo[1]-combo[0]\n",
+    "            for y, x in (combo[0]-diff, combo[1]+diff):\n",
+    "                if y >= 0 and y < ymax and x >= 0 and x < xmax:\n",
+    "                    antinodes.add((y, x))\n",
+    "    print(antinodes)\n",
+    "    return len(antinodes)\n",
     "\n",
     "day8()"
    ]
