--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "261"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,6 +447,75 @@
     "                if y >= 0 and y < ymax and x >= 0 and x < xmax:\n",
     "                    antinodes.add((y, x))\n",
     "    print(antinodes)\n",
+    "    return len(antinodes)\n",
+    "\n",
+    "day8()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['X' '.' '.' '.' '.' 'X' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' 'X' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' 'X' '.' '.' '.' '.' 'X' '.' '.' '.']\n",
+      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' 'X']\n",
+      " ['.' '.' 'X' '.' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' 'X' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' '.' 'X' '.' '.' '.' '.' '.']\n",
+      " ['.' '.' '.' '.' '.' '.' '.' '.' '.' '.']]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day8():\n",
+    "    grid = np.array(data(8, list))\n",
+    "    ymax, xmax = grid.shape\n",
+    "\n",
+    "    points = {i:np.argwhere(grid==i) for i in np.unique(grid) if i not in ('.', '#')}\n",
+    "    # print(points)\n",
+    "\n",
+    "    def is_inside(y, x):\n",
+    "        return y >= 0 and y < ymax and x >= 0 and x < xmax\n",
+    "\n",
+    "    antinodes = set()\n",
+    "    for antennae in points:\n",
+    "        combos = itertools.combinations(points[antennae], 2)\n",
+    "        for combo in combos:\n",
+    "            # print(combo)\n",
+    "            diff = combo[1]-combo[0]\n",
+    "\n",
+    "            node = combo[0].copy()\n",
+    "            while is_inside(*node):\n",
+    "                antinodes.add(tuple(node))\n",
+    "                node -= diff\n",
+    "\n",
+    "            node = combo[1].copy()\n",
+    "            while is_inside(*node):\n",
+    "                antinodes.add(tuple(node))\n",
+    "                node += diff\n",
+    "\n",
+    "    # debug = grid.copy()\n",
+    "    # for i in antinodes:\n",
+    "    #     debug[*i] = 'X'\n",
+    "    # print(debug)\n",
     "    return len(antinodes)\n",
     "\n",
     "day8()"
